# sustainability-project

./: README.md  pyproject.toml
ca/: annual_system_intensity.csv  daily_by_resource_intensity.csv  daily_system_intensity.csv  data_proc.py  download.py  proc.py  readme.md
ca/data/co2_per_resource/: 20180410.csv  20180411.csv  20180412.csv  20180413.csv  20180414.csv  20180415.csv  20180416.csv  20180417.csv  20180418.csv  20180419.csv  20180420.csv  20180421.csv  20180422.csv  20180423.csv  20180424.csv  20180425.csv  20180426.csv  20180427.csv  20180428.csv  20180429.csv  20180430.csv  20180501.csv  20180502.csv  20180503.csv  20180504.csv  20180505.csv  20180506.csv  20180507.csv  20180508.csv  20180509.csv  20180510.csv  20180511.csv  20180512.csv  20180513.csv  20180514.csv  20180515.csv  20180516.csv  20180517.csv  20180518.csv  20180519.csv  (+2397 more)
ca/data/supply_trend/: 20180410.csv  20180411.csv  20180412.csv  20180413.csv  20180414.csv  20180415.csv  20180416.csv  20180417.csv  20180418.csv  20180419.csv  20180420.csv  20180421.csv  20180422.csv  20180423.csv  20180424.csv  20180425.csv  20180426.csv  20180427.csv  20180428.csv  20180429.csv  20180430.csv  20180501.csv  20180502.csv  20180503.csv  20180504.csv  20180505.csv  20180506.csv  20180507.csv  20180508.csv  20180509.csv  20180510.csv  20180511.csv  20180512.csv  20180513.csv  20180514.csv  20180515.csv  20180516.csv  20180517.csv  20180518.csv  20180519.csv  (+2425 more)
tx/: annual_system_intensity.csv  data.summary.json  data_proc.py  gco2_per_kwh.json  proc.py  result.txt
tx/data/: gco2_per_kwh.json
